[package]
name = "RustPatchlessCLRLoader"
version = "1.0.0"
edition = "2021"
authors = ["C2Pain", "liukcj"]

[dependencies]
windows = { version = "0.54.0", features = [
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_LibraryLoader", 
    "Win32_System_Com", 
    "Win32_Foundation", 
    "Win32_System_Ole", 
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Wdk_System_SystemInformation",
    "Wdk_System_Threading",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_ToolHelp"
    ]}
clroxide = { path = "../clroxide", default-features = true }
rc4 = "0.1.0"
base64 = "0.13.0"
widestring = "0.4.3"

[profile.release]
pic = true
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.